--- a/frontend/index.html
+++ b/frontend/index.html
@@ -171,205 +171,32 @@
     </main>
 
     <main class="mine animated fadeIn" v-if="!status.isGallery">
-        <section class="gallery-section">
-            <span class="gallery-date">2018-06-13</span>
+        <section class="gallery-section" v-for="gs in myGallery">
+            <span class="gallery-date">{{gs.createdAt}}</span>
             <section class="gallery-ul">
-                <div class="gallery-li">
+                <div class="gallery-li" v-for="g in gs.gallery">
                     <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
+                        <img v-bind:src="g.imgUrl" class="gallery-img">
                         <div class="gallery-li-footer">
                             <div class="gallery-li-footer-logo">
                                 <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
+                                <span>{{g.watch}}</span>
                             </div>
                             <div class="gallery-li-footer-logo">
                                 <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
+                                <span>{{g.like}}</span>
                             </div>
                         </div>
                     </section>
                     <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
-                    </div>
-                </div>
-                <div class="gallery-li">
-                    <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
-                        <div class="gallery-li-footer">
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
-                    </div>
-                </div>
-                <div class="gallery-li">
-                    <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
-                        <div class="gallery-li-footer">
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
-                    </div>
-                </div>
-                <div class="gallery-li">
-                    <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
-                        <div class="gallery-li-footer">
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
+                        <img v-bind:src="userInfo.avatarUrl">&nbsp;&nbsp;&nbsp;
+                        <span>{{userInfo.nickname}}</span>
                     </div>
                 </div>
             </section>
         </section>
-        <section class="gallery-section">
-            <span class="gallery-date">2018-06-13</span>
-            <section class="gallery-ul">
-                <div class="gallery-li">
-                    <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
-                        <div class="gallery-li-footer">
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
-                    </div>
-                </div>
-                <div class="gallery-li">
-                    <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
-                        <div class="gallery-li-footer">
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
-                    </div>
-                </div>
-                <div class="gallery-li">
-                    <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
-                        <div class="gallery-li-footer">
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
-                    </div>
-                </div>
-                <div class="gallery-li">
-                    <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
-                        <div class="gallery-li-footer">
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
-                    </div>
-                </div>
-                <div class="gallery-li">
-                    <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
-                        <div class="gallery-li-footer">
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
-                    </div>
-                </div>
-                <div class="gallery-li">
-                    <section class="gallery">
-                        <img src="assets/demoimg/微光1.png" class="gallery-img">
-                        <div class="gallery-li-footer">
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/浏览.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                            <div class="gallery-li-footer-logo">
-                                <img src="assets/赞.png">&nbsp;&nbsp;
-                                <span>1w+</span>
-                            </div>
-                        </div>
-                    </section>
-                    <div class="gallery-user">
-                        <img src="assets/女头像.png">&nbsp;&nbsp;&nbsp;
-                        <span>Bob David</span>
-                    </div>
-                </div>
-            </section>
+        <section v-if="myGallery.length === 0" class="gallery-helper">
+            <span>您还没有属于自己的画廊，快去上传吧！</span>
         </section>
     </main>
 
